--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <artifactId>impact-crawler</artifactId>
     <version>1.0.0</version>
     <properties>
-        <maven.compiler.source>25</maven.compiler.source>
-        <maven.compiler.target>25</maven.compiler.target>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
         <lucene.version>10.3.2</lucene.version>
     </properties>
 
@@ -34,7 +34,12 @@
         <dependency>
             <groupId>com.github.javaparser</groupId>
             <artifactId>javaparser-core</artifactId>
-            <version>3.25.8</version>
+            <version>3.28.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.javaparser</groupId>
+            <artifactId>javaparser-symbol-solver-core</artifactId>
+            <version>3.28.0</version>
         </dependency>
     </dependencies>
 
